--- a/src/pages/Shop/Shop.module.scss
+++ b/src/pages/Shop/Shop.module.scss
@@ -4,7 +4,7 @@
   padding: 50px 200px;
 }
 .banner {
-  background-image: url("../../assets/Blog/blogbg.jpg");
+  background-image: url("../../assets/Cover/cover.jpg");
   height: 300px;
   background-position: center;
   background-size: cover;
@@ -15,6 +15,7 @@
   font-family: Jost, sans-serif;
   h1 {
     font-size: 35px;
+    color: white;
   }
 }
 
