--- a/src/pages/Cart/Cart.module.scss
+++ b/src/pages/Cart/Cart.module.scss
@@ -1,5 +1,5 @@
 .banner {
-  background-image: url("../../assets/Blog/blogbg.jpg");
+  background-image: url("../../assets/Cover/cover.jpg");
   height: 300px;
   background-position: center;
   background-size: cover;
@@ -10,10 +10,12 @@
   font-family: Jost, sans-serif;
   h1 {
     font-size: 35px;
+    color: white;
   }
 }
 
 .cart {
+  min-height: 30vh;
   .empty {
     text-align: center;
   }
