--- a/src/pages/Wishlist/Wishlist.module.scss
+++ b/src/pages/Wishlist/Wishlist.module.scss
@@ -1,5 +1,5 @@
 .banner {
-  background-image: url("../../assets/Blog/blogbg.jpg");
+  background-image: url("../../assets/Cover/cover.jpg");
   height: 300px;
   background-position: center;
   background-size: cover;
@@ -10,11 +10,13 @@
   font-family: Jost, sans-serif;
   h1 {
     font-size: 35px;
+    color: white;
   }
 }
 
 .wishlist {
-  .empty{
+  min-height: 30vh;
+  .empty {
     text-align: center;
   }
   font-family: Jost, sans-serif;
